<resources>
    <string name="preference_file_key">cz.vaclavtolar.world_data.PREFERENCE_FILE_KEY</string>

    <string name="app_name">Countries population</string>

    <string name="search_hint">Search country...</string>
    <string name="search_title">Search country</string>
    <string name="info_title">Info</string>
    <string name="settings_title">Settings</string>

    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="density">Density</string>
    <string name="country">Country</string>
    <string name="data_source">Data source</string>
    <string name="last_update_in_app">Last update of data in mobile app</string>
    <string name="first_column_sorted">First column (sorted by)</string>
    <string name="second_column">Second column</string>
    <string name="connection_error_message">Update failed.\n Check internet connection.</string>
    <string name="fitler_title">Filter</string>
</resources>
