<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/baseline_search_black_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:icon="@drawable/baseline_settings_black_24"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:id="@+id/action_show_info"
        android:title="@string/info_title"
        android:icon="@drawable/baseline_info_black_24"
        app:showAsAction="ifRoom|collapseActionView"
        />

</menu>