<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBackground"
    tools:context=".activity.SettingsActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_column_sorted"
            android:textColor="@color/primaryTextColor"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/column1_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:onClick="onCol1RadioClicked"
                />

            <RadioButton
                android:id="@+id/column1_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:onClick="onCol1RadioClicked"/>

            <RadioButton
                android:id="@+id/column1_density"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density"
                android:onClick="onCol1RadioClicked"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/second_column"
            android:textColor="@color/primaryTextColor"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/column2_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:onClick="onCol2RadioClicked"/>

            <RadioButton
                android:id="@+id/column2_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:onClick="onCol2RadioClicked"/>

            <RadioButton
                android:id="@+id/column2_density"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density"
                android:onClick="onCol2RadioClicked"/>

        </RadioGroup>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>